--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/site.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Decode@Chn - AI Website Builder | Create Stunning Websites in Seconds</title>
     <meta name="description" content="Build professional, responsive websites with our AI-powered website builder. From zero to hero in seconds. Start building your dream website today.">
